Dagger project configuration Api client for the app Search acronym use case Data layer for search acronym

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.chriscalderonh.andersonscodechallenge">
 
     <application
+        android:name="com.chriscalderonh.andersonscodechallenge.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
