--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.chriscalderonh.andersonscodechallenge">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name="com.chriscalderonh.andersonscodechallenge.MainApplication"
         android:allowBackup="true"
@@ -9,6 +11,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndersonsCodeChallenge" />
+        android:theme="@style/Theme.AndersonsCodeChallenge"
+        android:usesCleartextTraffic="true">
+
+        <activity
+            android:name="com.chriscalderonh.andersonscodechallenge.AppActivity"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
 
 </manifest>
